# py_tc_led_table

./: .gitignore  .gitmodules  README.md  config.sample.ini  requirements.txt
cpplib/: CMakeLists.txt
cpplib/src/core/: CMakeLists.txt  Cluster.h  ClusterMessage.cpp  ClusterMessageManager.cpp  ClusterMessageManager.h  Node.h
examples/: bootstrap.py  color-test.py  connect-nodes.py  connectNodes.py  incrementalFill.py  ripple.py  snek.py  statusPulse.py  table-simulator.py  testNode.py  wipe.py
scripts/: README.md  monitor_serial.py
src/: bootstrap_bindings.py  node_geometry.py  utils.py
src/apps/: AppBase.py  NoiseTouchTest.py  TestApp.py  Zapper.py
src/artnet/: receiver.py
src/communication/: message_manager.py  mqtt_client.py
src/config/: settings.py
src/effects/: base_composite_effect.py  base_effect.py  chain_effect.py  cumulative_composite_effect.py  pixel_color_effect.py  pixel_move_effect.py
src/generators/: README.md  base_generator.py  composite_generator.py  cyclic_generator.py  modulus_generator.py  ping_pong_generator.py  random_noise_generator.py  scale_generator.py  sine_generator.py  stable_value_generator.py  tween_generator.py  tween_generator.py.v1
src/pygame/: TableController.py  TableDisplay.py  TableSimulator.py
src/runner/: AppRunner.py  EffectRunner.py  app_registry.py  effect_registry.py  manage_apps.py  manage_effects.py  status_config.json
src/system/: 49-tcledtable-systemd.rules  README.md  eth0-fallback.service  eth0-fallback.sh  hostapd.conf  manage_apps.service  manage_apps.sh  manage_effects.service  wlan0.conf  (+8 more)
(+23 files in other folders)
